--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 			rel="stylesheet"
 		/>
 		<title>Monntt - Asesoria financiera</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-F7YDVMRK8K"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-F7YDVMRK8K');
+		</script>
 	</head>
 	<body>
 		<main class="parent">
