--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							stroke-linecap="round"
 							stroke-miterlimit="10"
 							stroke-width="1.5"
-							stroke="#265F58"
+							stroke="#ffffff"
 							fill="none"
 							d="M19.1914 4.8C17.4623 3.07 15.0735 2 12.4448 2C9.81609 2 7.41729 3.07 5.69815 4.8C3.96902 6.53 2.89955 8.92 2.89955 11.56C2.89955 13.65 3.57921 15.59 4.71864 17.16L2 22L8.69665 20.32C9.0065 20.45 9.32634 20.58 9.64618 20.68C10.5357 20.96 11.4653 21.1 12.4448 21.1C15.0835 21.1 17.4723 20.03 19.2014 18.3C20.9305 16.57 22 14.19 22 11.56C21.99 8.92 20.9205 6.53 19.1914 4.8Z"
 						></path>
@@ -123,12 +123,32 @@
 							stroke-linecap="round"
 							stroke-miterlimit="10"
 							stroke-width="1.5"
-							stroke="#265F58"
+							stroke="#ffffff"
 							fill="none"
 							d="M9.81273 14.19C12.325 16.7 15.3877 17.72 16.6388 16.46L18 15.1L15.2676 12.37L13.9064 13.73L10.2731 10.09L11.6343 8.73L8.90192 6L7.54071 7.36C6.27959 8.62 7.3005 11.68 9.81273 14.19Z"
 						></path>
 					</svg>
 					Hacenos tu consulta
+				</a>
+
+				<a
+					class="account"
+					href="https://balanz.com/abrir-cuenta-2.aspx?reference=lmonnittola@ap.balanz.com"
+				>
+					<svg
+						width="25"
+						height="25"
+						viewBox="0 0 25 25"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M24.5 12.4252C24.5 19.0694 19.1189 24.4504 12.4747 24.4504C6.18421 24.4504 1.03053 19.6252 0.5 13.461H14.2432L10.6053 17.1241C10.2011 17.5283 10.2011 18.1852 10.6053 18.5894C10.8074 18.7915 11.06 18.8925 11.3379 18.8925C11.6158 18.8925 11.8684 18.7915 12.0705 18.5894L17.5021 13.1578C17.9063 12.7536 17.9063 12.0967 17.5021 11.6925L12.0705 6.26096C11.6663 5.85674 11.0095 5.85674 10.6053 6.26096C10.2011 6.66517 10.2011 7.32201 10.6053 7.72622L14.2684 11.3894H0.5C1.03053 5.22517 6.18421 0.399902 12.4747 0.399902C19.1189 0.399902 24.5 5.78095 24.5 12.4252Z"
+							fill="#ffffff"
+						/>
+					</svg>
+
+					Abri tu cuenta
 				</a>
 			</div>
 		</main>
